--- a/einführung_maschinelle_textverarbeitung.ipynb
+++ b/einführung_maschinelle_textverarbeitung.ipynb
@@ -623,7 +623,9 @@
     "nlp = spacy.load(\"de_core_news_sm\")\n",
     "text = \"Heute ist ein schöner Tag, auch wenn es regnet, der Himmel grau und die Straßen nass sind.\"\n",
     "doc = nlp(text)\n",
-    "\" \".join([token.lemma_ for token in doc])"
+    "\" \".join([token.lemma_ for token in doc])\n",
+    "\n",
+    "#Spacy funktioniert aus unbekannten Gründen nicht"
    ]
   },
   {
