--- a/boolean retrieval.ipynb
+++ b/boolean retrieval.ipynb
@@ -21,6 +21,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook boolean retrieval.ipynb to html\n",
+      "[NbConvertApp] Writing 662994 bytes to boolean retrieval.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html \"boolean retrieval.ipynb\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1747,7 +1765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.7"
   },
   "varInspector": {
    "cols": {
