--- a/docker+elastic/elastic search for text analysis.ipynb
+++ b/docker+elastic/elastic search for text analysis.ipynb
@@ -16,6 +16,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook elastic search for text analysis.ipynb to html\n",
+      "[NbConvertApp] Writing 617453 bytes to elastic search for text analysis.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html \"elastic search for text analysis.ipynb\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -534,8 +552,11 @@
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
+  "interpreter": {
+   "hash": "623bc2abc38a2d314a3b14340e4de5092fc14f3df3a22fbb19e54e9efd31adfa"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -549,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.7"
   },
   "varInspector": {
    "cols": {
