--- a/docker+elastic/einführung elastic search.ipynb
+++ b/docker+elastic/einführung elastic search.ipynb
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T14:22:01.720039Z",
@@ -563,7 +563,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T10:34:40.695030Z",
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T10:37:30.471870Z",
@@ -717,20 +717,10 @@
     {
      "data": {
       "text/plain": [
-       "{'took': 2,\n",
-       " 'timed_out': False,\n",
-       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
-       " 'hits': {'total': {'value': 1, 'relation': 'eq'},\n",
-       "  'max_score': 1.0,\n",
-       "  'hits': [{'_index': 'band-data-python',\n",
-       "    '_id': 'l4SXA4ABmRhRDkTnKsdj',\n",
-       "    '_score': 1.0,\n",
-       "    '_source': {'song': 'In The End',\n",
-       "     'album': 'Hybrid Theory',\n",
-       "     'band': 'Linkin Park'}}]}}"
+       "ObjectApiResponse({'took': 11, 'timed_out': False, '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0}, 'hits': {'total': {'value': 1, 'relation': 'eq'}, 'max_score': 1.0, 'hits': [{'_index': 'band-data-python', '_id': 'REwLpYABI1XhAUHMMetp', '_score': 1.0, '_source': {'song': 'In The End', 'album': 'Hybrid Theory', 'band': 'Linkin Park'}}]}})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T10:42:17.059564Z",
@@ -837,20 +827,10 @@
     {
      "data": {
       "text/plain": [
-       "{'took': 2,\n",
-       " 'timed_out': False,\n",
-       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
-       " 'hits': {'total': {'value': 1, 'relation': 'eq'},\n",
-       "  'max_score': 0.2876821,\n",
-       "  'hits': [{'_index': 'band-data-python',\n",
-       "    '_id': 'l4SXA4ABmRhRDkTnKsdj',\n",
-       "    '_score': 0.2876821,\n",
-       "    '_source': {'song': 'In The End',\n",
-       "     'album': 'Hybrid Theory',\n",
-       "     'band': 'Linkin Park'}}]}}"
+       "ObjectApiResponse({'took': 54, 'timed_out': False, '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0}, 'hits': {'total': {'value': 1, 'relation': 'eq'}, 'max_score': 0.2876821, 'hits': [{'_index': 'band-data-python', '_id': 'REwLpYABI1XhAUHMMetp', '_score': 0.2876821, '_source': {'song': 'In The End', 'album': 'Hybrid Theory', 'band': 'Linkin Park'}}]}})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T14:36:18.883910Z",
@@ -977,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T14:36:20.971145Z",
@@ -995,7 +975,7 @@
        " {'_index': 'country-index', '_source': {'doc_text': 'frankreich'}}]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T14:39:24.937932Z",
@@ -1023,7 +1003,7 @@
        "(2, [])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,6 +1051,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "import re\n",
+    "\n",
+    "def tokenize_new(document):\n",
+    "    stops = set(stopwords.words('german'))\n",
+    "    document=document.lower()\n",
+    "    r=re.findall(r\"\\w+\", document)\n",
+    "    wordsFiltered = []\n",
+    "    stopw = []\n",
+    "    for w in r:\n",
+    "        if w in stops:\n",
+    "            stopw.append(w)\n",
+    "        else:\n",
+    "            wordsFiltered.append(w)\n",
+    "    wordsFiltered.extend(list(set(stopw)))\n",
+    "    return wordsFiltered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "path = \"\\Studium\\IR\\countries\\countries\"\n",
+    "token_dict = {}\n",
+    "for file in os.listdir(path):\n",
+    "    f=os.path.join(path,file)\n",
+    "    if os.path.isfile(f):\n",
+    "        t= open(f, encoding = \"utf-8\")\n",
+    "        data=t.read()\n",
+    "        dict = {\n",
+    "            file[:-4]:tokenize_new(data)\n",
+    "        }\n",
+    "    token_dict.update(dict)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1094,8 +1119,11 @@
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
+  "interpreter": {
+   "hash": "623bc2abc38a2d314a3b14340e4de5092fc14f3df3a22fbb19e54e9efd31adfa"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
