--- a/hash_table.ipynb
+++ b/hash_table.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook hash_table.ipynb to html\n",
-      "[NbConvertApp] Writing 1360742 bytes to hash_table.html\n"
+      "[NbConvertApp] Writing 660056 bytes to hash_table.html\n"
      ]
     }
    ],
